# pushpin

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md
.github/: build-and-deploy.yml
.github/workflows/: build-and-deploy.yml
docs/: PUSHPIN.yaml  index.html
docs/01-getting-started/: installation.html  overview.html
docs/02-concepts/: CLI.html  pages.html  sections.html  templates.html
docs/03-deployment/: gitHub-pages.html
docs/concepts/: pages.html  sections.html  table-of-contents.html
docs/deployment/: gitHub-pages.html
docs/getting-started/: installation.html  overview.html
docs/pages/: index.md
docs/pages/01-getting-started/: installation.md  overview.md
docs/pages/02-concepts/: CLI.md  pages.md  sections.md  templates.md
docs/pages/03-deployment/: gitHub-pages.md
docs/posts/: post1.html
docs/style/: index.css  post.css
docs/templates/: cli.html  github-pages.html  index.html  installation.html  overview.html  pages.html  sections.html  templates.html
src/: gen_site.rs  index.html  main.rs  serve.rs  up.html  watcher.rs
src/style/: post.css  stylesheet.css
src/templates/: index.html.template  post.html.template
