[package]
name = "pushpin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.10.3"
yaml-rust = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1.19.1"
anyhow = "1.0.82"

